--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = LPC1768
+default_envs = STM32F103RC_btt_512K
 include_dir  = Marlin
 
 #
@@ -801,10 +801,11 @@ platform          = ${common_stm32f1.platform}
 extends           = env:STM32F103RC_btt
 board_upload.maximum_size=524288
 build_flags       = ${env:STM32F103RC_btt.build_flags} -DSTM32_FLASH_SIZE=512
+upload_port       = "/Volumes/SV01"
 
 [env:STM32F103RC_btt_512K_USB]
 platform          = ${common_stm32f1.platform}
-extends           = env:STM32F103RC_btt_512K
+extends           = env:STM32F103RC_btt_512K1
 build_flags       = ${env:STM32F103RC_btt_512K.build_flags} -DUSE_USB_COMPOSITE
 lib_deps          = ${env:STM32F103RC_btt_512K.lib_deps}
   USBComposite for STM32F1@0.91
